--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -24,7 +24,7 @@
 
         <div class="form-group mt-3">
           <input type="password" placeholder="Password" class="form-control">
-          <a id="passwordResetLink" href="#" class="float-right mt-1">
+          <a id="passwordResetLink" class="float-right mt-1" routerLink="/password-reset">
             Forgot password?</a>
         </div>
 
