--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -27,7 +27,7 @@
         <div class="d-flex align-items-center mt-4">
           <button type="submit" class="btn btn-primary">Sign Up</button>
           <span class="ml-3">
-              or <a id="signInLink" href="sign-in.html">Sign In</a>
+              or <a id="signInLink" routerLink="/sign-in">Sign In</a>
             </span>
         </div>
 
