--- a/src/app/password-reset/password-reset.component.html
+++ b/src/app/password-reset/password-reset.component.html
@@ -25,7 +25,7 @@
         <div class="d-flex align-items-center mt-4">
           <button type="submit" class="btn btn-primary">Reset</button>
           <span class="ml-3">
-              or <a id="signInLink" href="sign-in.html">Cancel</a>
+              or <a id="cancelLink" routerLink="/sign-in">Cancel</a>
             </span>
         </div>
 
