--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -11,19 +11,26 @@
 
       <form id="signUpForm" (submit)="onSubmit()">
 
-        Email invalid: {{ email.invalid | json }}
-        <br>
-        Email valid: {{ email.valid | json }}
-
         <div class="mt-4">
-          <app-email-input
+          <app-input
+            ngDefaultControl
             [formControl]="email"
             [errorMessage]="emailErrorMessage"
+            [placeholder]="'Email'"
             (blur)="onEmailBlur()"
-            (focus)="onEmailFocus()"
-            ngDefaultControl>
-          </app-email-input>
+            (focus)="onEmailFocus()">
+          </app-input>
         </div>
+
+
+        <app-input
+          ngDefaultControl
+          [formControl]="password"
+          [errorMessage]="passwordErrorMessage"
+          [placeholder]="'Password'"
+          [type]="'password'">
+        </app-input>
+
 
 
         <!--<div class="form-group mt-4">
@@ -36,7 +43,7 @@
           </div>
         </div>-->
 
-        <div class="form-group mt-3">
+        <!--<div class="form-group mt-3">
           <input type="password" placeholder="Password" class="form-control"
                  [formControl]="password"
                  [class.is-invalid]="password.touched && password.invalid"
@@ -44,7 +51,7 @@
           <div *ngIf="password.invalid" class="invalid-feedback">
             {{ passwordErrorMessage }}
           </div>
-        </div>
+        </div>-->
 
         <div class="clearfix"></div>
 
