add password pattern validator

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -16,9 +16,7 @@
             ngDefaultControl
             [formControl]="email"
             [errorMessage]="emailErrorMessage"
-            [placeholder]="'Email'"
-            (blur)="onEmailBlur()"
-            (focus)="onEmailFocus()">
+            [placeholder]="'Email'">
           </app-input>
         </div>
 
