--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -42,7 +42,11 @@
         <div class="clearfix"></div>
 
         <div class="d-flex align-items-center mt-4">
-          <button type="submit" class="btn btn-primary">Sign Up</button>
+          <button type="submit" class="btn btn-primary"
+                  [class.is-pending]="formGroup.pending">
+            <span>Sign Up</span>
+            <i class="pending-indicator fa fa-spinner fa-pulse"></i>
+          </button>
           <span class="ml-3">
             or <a id="signInLink" routerLink="/sign-in">Sign In</a>
           </span>
